# Filter-Applier

./: CMakeLists.txt  filtersmanager.cpp  filtersmanager.h  helper.h  imagework.cpp  imagework.h  main_process.cpp  parser.cpp  parser.h  readme.md
filters/: base_filter.h  crystallize.cpp  crystallize.h  edge_detection_filter.cpp  edge_detection_filter.h  emboss_filter.cpp  emboss_filter.h  gaussian_blur_filter.cpp  gaussian_blur_filter.h  grayscale_filter.cpp  grayscale_filter.h  image_matrix.h  negative_filter.cpp  sharpening_filter.cpp  sharpening_filter.h
tests/: test_image.cpp
