add_catch(main_process.cpp
        tests/test_image.cpp
        filtersmanager.h
        filtersmanager.cpp
        parser.h
        parser.cpp
        imagework.h
        imagework.cpp
        helper.h
        filters/base_filter.h
        filters/crop_filter.cpp
        filters/sharpening_filter.h
        filters/sharpening_filter.cpp
        filters/edge_detection_filter.cpp
        filters/gaussian_blur_filter.cpp
        filters/grayscale_filter.cpp
        filters/negative_filter.cpp
        filters/emboss_filter.h
        filters/emboss_filter.cpp
        filters/crystallize.h
        filters/crystallize.cpp
        )

add_executable(
        image_processor
        main_process.cpp
        filtersmanager.h
        filtersmanager.cpp
        parser.h
        parser.cpp
        imagework.h
        imagework.cpp
        helper.h
        filters/base_filter.h
        filters/crop_filter.cpp
        filters/sharpening_filter.h
        filters/sharpening_filter.cpp
        filters/edge_detection_filter.cpp
        filters/gaussian_blur_filter.cpp
        filters/grayscale_filter.cpp
        filters/negative_filter.cpp
        filters/emboss_filter.h
        filters/emboss_filter.cpp
        filters/crystallize.h
        filters/crystallize.cpp)
